--- a/index.html
+++ b/index.html
@@ -2,9 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>lilihi</title>
+  <meta name="keywords" content="recommendations,engine">
+  <meta name="description" content="Love It, Like It, Hate It">
+  <meta name="rating" content="General">
+  <meta name="distribution" content="Global">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <style type="text/css">
+    body {
+      overflow-y: scroll;
+      font-family: sans-serif;
+    }
+    img, main, pre > code {
+      display: block;
+      margin: 25px auto;
+    }
+    main {
+      padding: 20px;
+      max-width: 600px;
+      line-height: 1.6;
+      word-wrap: break-word;
+    }
+    img {
+      max-width: 100%;
+    }
+    pre > code {
+      padding: 20px;
+      white-space: pre-wrap;
+    }
+    code {
+      background: #eee;
+      padding: 2px;
+    }
+    blockquote {
+      border-left: 7px solid #ddd;
+      padding: 0 14px;
+      color: #666;
+      margin: 0;
+    }
+    h1, h2, h3, h4 {
+      line-height: 1.2;
+    }
+    hr {
+      border: 2px solid #ddd;
+    }
+  </style>
 </head>
 <body>
-  <h1>coming soon</h1>
+  <h1>Love it, Like It, Hate It</h1>
 </body>
 </html>
